<resources>
    <string name="app_name">Fantabasket</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="disconnect">Disconnect</string>
    <string name="add_player">Add player</string>
    <string name="basketball_field">Basketball field</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_lineup">Lineup</string>
    <string name="title_profile">Profile</string>
    <string name="team_logo">Team logo</string>
    <string name="team_name">Team name</string>
    <string name="lega">Lega</string>
    <string name="title_roster_manager">Roster manager</string>
    <string name="fantamilioni">Fantamilioni (fm)</string>
    <string name="roster">Roster</string>
    <string name="salva">Salva</string>
    <string name="change">Change</string>
    <string name="leghe_a_cui_partecipi">Leghe a cui partecipi</string>
    <string name="leghe_disponibili">Leghe disponibili</string>
    <string name="crea_lega">Crea Lega</string>
    <string name="title_leghe">Leghe</string>
    <string name="nessuna_lega_partecipata">Nessuna lega partecipata</string>
    <string name="nessuna_lega_presente">Nessuna lega presente</string>
    <string name="creazione_lega">Creazione lega</string>
    <string name="nome_lega">Nome lega</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="start_partecipanti_number">8</string>
    <string name="formula_1">Formula 1</string>
    <string name="calendario">Calendario</string>
    <string name="numero_di_partecipanti">Numero di partecipanti</string>
    <string name="location">Location</string>
    <string name="tipologia">Tipologia</string>
    <string name="crea">Crea</string>
    <string name="nickname_president">Nickname president</string>
    <string name="team">Team</string>
    <string name="user_data">User Data</string>
    <string name="team_logo_image">Team logo image</string>
    <string name="get">Get</string>
    <string name="start">Start</string>
    <string name="versus">VS</string>
    <string name="hometeam">HomeTeam</string>
    <string name="awayteam">AwayTeam</string>
    <string name="next_game">Next Game</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Calcolo giornata  -->
    <string name="calcolo_giornata">Calcolo giornata</string>
    <string name="primo_posto">1º</string>
    <string name="punti">punti</string>
    <string name="repeat_password">Repeat password</string>

    <!-- Access activity   -->
    <string name="title_activity_access">AccessActivity</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="registration_fragment_label">Registration Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="registration_arrow"><![CDATA[Registration ->]]></string>
    <string name="login">Login</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="update_leaderboard">Update leaderboard</string>
    <string name="not_started_yet">Non è ancora iniziata la competizione</string>
    <string name="not_league_selected">Non è selezionata alcuna lega</string>
    <string name="cambia_lega">Cambia lega</string>
    <string name="last_game">Last game</string>
    <string name="search_player">search player</string>
    <string name="order">Order</string>
    <string name="seleziona_lega">SELEZIONA</string>
    <string name="unisciti_lega">UNISCITI</string>
    <string name="your_location">Your location</string>

    <!--  CITTÀ  -->
    <string name="roma">(IT) Roma</string>
    <string name="trieste">(IT) Trieste</string>
    <string name="bologna">(IT) Bologna</string>
    <string name="milano">(IT) Milano</string>
    <string name="napoli">(IT) Napoli</string>
    <string name="londra">(UK) Londra</string>
    <string name="new_york">(US) New York</string>
    <string name="parigi">(FR) Parigi</string>


    <string name="title_activity_leagues">LeaguesActivity</string>
    <string name="league_choice_fragment_label">League Choice</string>
    <string name="league_creation_fragment_label">League Creation</string>
    <string name="create_league_button">Create league button</string>
    <string name="refresh">REFRESH</string>
    <string name="league">League</string>
    <string name="change_team_name">Change Team Name</string>
    <string name="profile">Profile</string>
    <string name="change_team_logo">Change team logo</string>
    <string name="change_email">Change email</string>
    <string name="send_email_to_change_password">Send email to change password</string>
    <string name="tempo_rimanente">Tempo rimanente</string>
    <string name="change_nickname">Change nickname</string>
    <string name="no_connection">NO CONNECTION</string>
    <string name="reload">Reload</string>
    <string name="ricalcola_tutte_le_giornate">Ricalcola tutte le giornate</string>
    <string name="at_least_6_chars">At least of 6</string>
    <string name="input_fields_are_not_valid">Input are not valid</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="registration_failed">Registration failed</string>
    <string name="team_data">Team Data</string>
    <string name="libera_posizione">Libera posizione</string>
    <string name="round_started_yet">È iniziata la giornata non puoi cambiare il roster</string>
    <string name="at_least_12_players">Minimo 12 giocatori</string>
    <string name="change_team_data">Change team data</string>
    <string name="invalid_nickname">Invalid Nickname</string>
    <string name="email_changed">Email changed</string>
    <string name="email_not_changed">Email NOT changed</string>
    <string name="email_for_password_reset_sent">Email for password reset sent</string>
    <string name="email_for_reset_password_not_sent">It\'s not possible to sent email for reset password</string>
    <string name="email_of_user_account_null">Email of your account is null</string>
    <string name="zero">0</string>
    <string name="display">Schermo</string>
    <string name="no_location">No location</string>
    <string name="no_address">No address</string>
    <string name="league_with_same_name">A league with this name already exist</string>
    <string name="started_yet">È già iniziata</string>
    <string name="no_more_space">NON CI SONO POSTI</string>
    <string name="open_maps">Active localization and open Maps for the actual position</string>
    <string name="round">round</string>
    <string name="reset_password">Reset password</string>
</resources>