<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="Schermo">

        <ListPreference
                app:key="theme"
                app:title="Theme"
                app:entries="@array/theme_entries"
                app:entryValues="@array/theme_values"
                app:defaultValue="light"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/messages_header">

        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true"/>

        <ListPreference
                app:key="reply"
                app:title="@string/reply_title"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:defaultValue="reply"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/sync_header">

        <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title"/>

        <SwitchPreferenceCompat
                app:key="attachment"
                app:title="@string/attachment_title"
                app:summaryOn="@string/attachment_summary_on"
                app:summaryOff="@string/attachment_summary_off"
                app:dependency="sync"/>

    </PreferenceCategory>

</PreferenceScreen>