<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/basic_margin_16dp"
            tools:context=".ui.LegaCreationFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_20"
                android:text="@string/creazione_lega"/>

        <EditText
                android:id="@+id/legaName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_touch_48dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/nome_lega"
                tools:ignore="LabelFor,Autofill"/>

        <RadioGroup
                android:id="@+id/locationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textSize="17sp"
                    android:layout_marginEnd="@dimen/basic_margin_16dp"
                    android:text="@string/location"/>

            <RadioButton
                    android:id="@+id/mainLocationRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <Spinner
                        android:id="@+id/locationSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/min_touch_48dp"
                        android:entries="@array/locations_entries"
                        />
            </LinearLayout>

            <RadioButton
                    android:id="@+id/yourLocationRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <TextView
                        android:id="@+id/yourLocationTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="@dimen/padding_8dp"
                        android:textSize="17sp"
                        android:hint="@string/your_location"
                        android:ems="10"
                        android:layout_weight="2"
                        tools:ignore="LabelFor,Autofill"/>

                <Button
                        android:layout_weight="1"
                        android:id="@+id/getYourLocationButton"
                        android:text="@string/get"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
            </LinearLayout>

        </RadioGroup>

        <RadioGroup
                android:id="@+id/typeLegaRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/basic_margin_16dp"
                    android:text="@string/tipologia"/>

            <RadioButton
                    android:id="@+id/formula1RadioButton"
                    android:text="@string/formula_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

            <RadioButton
                    android:id="@+id/calendarioRadioButton"
                    android:text="@string/calendario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/numero_di_partecipanti"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/decrementNumPartecipantiButton"
                    android:text="@string/decrement"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/numPartecipantiTextView"
                    android:text="@string/start_partecipanti_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="2"/>

            <Button
                    android:layout_weight="1"
                    android:id="@+id/incrementNumPartecipantiButton"
                    android:text="@string/increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>


        <Button
                android:id="@+id/creaLegaButton"
                android:text="@string/crea"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/esteco"/>


        <!--        <com.google.android.gms.maps.MapView-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="110dp"-->
        <!--                android:id="@+id/mapView"-->
        <!--                tools:ignore="MissingClass"/>-->
    </LinearLayout>
</ScrollView>