<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/min_touch_48dp"
        android:id="@+id/registrationConstraintLayout"
        tools:context=".RegistrationActivity">
<!--TODO:scroll layout-->
    <LinearLayout
            android:id="@+id/linearLayoutForUserData"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/userDataTitle"
                android:text="@string/user_data"
                android:textSize="@dimen/base_text_size_20"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_element"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email"
                tools:ignore="Autofill"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_element"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password"
                tools:ignore="Autofill"/>

        <EditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_element"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/repeat_password"
                tools:ignore="Autofill"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayoutForUserTeam"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutForUserData"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">

        <TextView
                android:id="@+id/teamDataTitle"
                android:text="@string/team"
                android:textSize="@dimen/base_text_size_20"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_element"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/nickname"
                tools:ignore="Autofill"/>

        <EditText
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_element"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/team_name"
                tools:ignore="Autofill"/>

        <Button
                android:id="@+id/teamLogoButton"
                android:text="@string/team_logo"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"/>

        <ImageView
                android:id="@+id/teamLogoImage"
                android:layout_gravity="center"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/team_logo_image"/>
    </LinearLayout>

    <Button
            android:id="@+id/registrationButton"
            android:enabled="false"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutForUserTeam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/esteco"/>

</androidx.constraintlayout.widget.ConstraintLayout>