<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/leagueCreationFragmentView"
        tools:context=".ui.leagues.LeagueCreationFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/basic_margin_16dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_20"
                android:text="@string/creazione_lega"/>

        <EditText
                android:id="@+id/legaName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_touch_48dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/nome_lega"
                tools:ignore="LabelFor,Autofill"/>

        <TextView
                android:labelFor="@+id/locationRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textSize="17sp"
                android:text="@string/location"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationRadioGroup"
                android:orientation="horizontal">

            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <RadioButton
                        android:id="@+id/mainLocationRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/min_touch_48dp"
                        android:checked="true"/>

                <RadioButton
                        android:id="@+id/yourLocationRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/min_touch_48dp"/>
            </RadioGroup>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <Spinner
                        android:id="@+id/locationSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/min_touch_48dp"
                        android:entries="@array/locations_entries"
                        />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/min_touch_48dp"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/yourLocationTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:padding="@dimen/padding_8dp"
                            android:textSize="17sp"
                            android:hint="@string/your_location"
                            android:ems="10"
                            android:layout_weight="2"
                            tools:ignore="LabelFor,Autofill"/>

                    <Button
                            android:layout_weight="1"
                            android:id="@+id/getYourLocationButton"
                            android:text="@string/get"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
                android:labelFor="@+id/typeLegaRadioGroup"
                android:text="@string/tipologia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>

        <RadioGroup
                android:id="@+id/typeLegaRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <RadioButton
                    android:id="@+id/formula1RadioButton"
                    android:text="@string/formula_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <RadioButton
                    android:id="@+id/calendarioRadioButton"
                    android:text="@string/calendario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </RadioGroup>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:text="@string/numero_di_partecipanti"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/decrementNumPartecipantiButton"
                    android:text="@string/decrement"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/numPartecipantiTextView"
                    android:text="@string/start_partecipanti_number"
                    android:textSize="@dimen/text_size_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="2"/>

            <Button
                    android:layout_weight="1"
                    android:id="@+id/incrementNumPartecipantiButton"
                    android:text="@string/increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>


        <Button
                android:id="@+id/creaLegaButton"
                android:text="@string/crea"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/esteco"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>