<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistrationFragment"

        android:id="@+id/linearLayoutForUserTeam"
        android:orientation="vertical">

    <TextView
            android:id="@+id/teamDataTitle"
            android:text="@string/team"
            android:textSize="@dimen/text_size_20"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_touch_48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/nickname"
            tools:ignore="Autofill"/>

    <EditText
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_touch_48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/team_name"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/teamLogoButton"
            android:text="@string/team_logo"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"/>

    <ImageView
            android:id="@+id/teamLogoImage"
            android:layout_gravity="center"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/team_logo_image"/>
</LinearLayout>