<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LegheFragment"
            android:padding="10dp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Button
                android:id="@+id/creaLegaButton"
                android:text="@string/crea_lega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        <TextView
                android:id="@+id/title_leghe_partecipate"
                android:text="@string/leghe_a_cui_partecipi"
                android:textSize="@dimen/base_text_size_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:id="@+id/leghePartecipate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/basic_margin">

            <TextView
                    android:id="@+id/nessunaLegaPartecipata"
                    android:text="@string/nessuna_lega_partecipata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkRed"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>
        </LinearLayout>

        <TextView
                android:id="@+id/title_leghe_disponibili"
                android:text="@string/leghe_disponibili"
                android:textSize="@dimen/base_text_size_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:id="@+id/legheDisponibili"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/nessunaLegaDisponibile"
                    android:text="@string/nessuna_lega_presente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkRed"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>